Fix Plus Points widget state management

--- a/lib/server/public/partner-plus.html
+++ b/lib/server/public/partner-plus.html
@@ -34,7 +34,7 @@
 <body>
     <span class="widget-text">Sub split:
         <span class="bold" id="points-counter">-/-</span> points. Today's Tier 3 goal:
-        <span class="bold" id="tier3-couter">-/-</span>
+        <span class="bold" id="tier3-counter">-/-</span>
     </span>
 
     <!-- Include the Socket.io library -->
